# cx_moveit2

./: README.md
ws_moveit/: optimized_trajectory.txt  optimized_trajectory_20260126_191617.csv  (+76 more)
ws_moveit/src/cr7_robot_controller/: CMakeLists.txt  package.xml
ws_moveit/src/cr7_robot_controller/.trae/documents/: CR7机器人控制器模块化重构计划.md  OMPL约束规划优化方案.md  OMPL规划器代码重构计划.md  代码风格调整计划.md  修复 CMakeLists.txt 文件.md  将通用工具函数从 CR7BaseController 移到工具类.md
ws_moveit/src/cr7_robot_controller/.trae/documents/Readme/: CHANGES_SUMMARY.md  FILES_CHECKLIST.md
ws_moveit/src/cr7_robot_controller/Readme/: FINAL_REPORT.md  FK_CALCULATION_README.md  FK_FIX_SUMMARY.md  FK_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  PILZ_ANALYSIS_README.md  PILZ_QUICK_REFERENCE.md  PILZ_RETRY_MECHANISM.md  VERIFICATION_CHECKLIST.md
ws_moveit/src/cr7_robot_controller/config/: ompl_planning.yaml
ws_moveit/src/cr7_robot_controller/data/: analyze_pilz_welding.py  analyze_trajectory.py  optimized_trajectory_20260126_184616.csv  optimized_trajectory_20260126_190648.csv  optimized_trajectory_20260126_190937.csv  original_trajectory_20260126_163918.csv  original_trajectory_20260126_184026.csv  original_trajectory_20260126_190550.csv  original_trajectory_20260126_190615.csv  original_trajectory_20260126_190821.csv  preprocessed_waypoints_20260126_163917.csv  preprocessed_waypoints_20260126_184025.csv  preprocessed_waypoints_20260126_184615.csv  preprocessed_waypoints_20260126_190550.csv  preprocessed_waypoints_20260126_190614.csv  preprocessed_waypoints_20260126_190648.csv  preprocessed_waypoints_20260126_190820.csv  preprocessed_waypoints_20260126_190937.csv  run_pilz_analysis.sh  trajectory_analysis_report.txt
ws_moveit/src/cr7_robot_controller/include/cr7_robot_controller/: cr7_robot_controller.hpp
ws_moveit/src/cr7_robot_controller/include/cr7_robot_controller/base/: cr7_base_controller.hpp
ws_moveit/src/cr7_robot_controller/include/cr7_robot_controller/cartesian/: cr7_cartesian_planner.hpp
ws_moveit/src/cr7_robot_controller/include/cr7_robot_controller/path/: cr7_path_executor.hpp
ws_moveit/src/cr7_robot_controller/include/cr7_robot_controller/pilz/: cr7_pilz_planner.hpp
ws_moveit/src/cr7_robot_controller/include/cr7_robot_controller/utils/: pose_utils.hpp  trajectory_analyzer.hpp
ws_moveit/src/cr7_robot_controller/launch/: cr7_controller.launch.py
ws_moveit/src/cr7_robot_controller/src/: cr7_robot_controller.cpp  main.cpp  test.py
ws_moveit/src/cr7_robot_controller/src/base/: cr7_base_controller.cpp
ws_moveit/src/cr7_robot_controller/src/cartesian/: cr7_cartesian_planner.cpp
ws_moveit/src/cr7_robot_controller/src/path/: cr7_path_executor.cpp
ws_moveit/src/cr7_robot_controller/src/pilz/: cr7_pilz_planner.cpp
ws_moveit/src/cr7_robot_controller/src/planners/cartesian/: cr7_cartesian_planner.cpp
ws_moveit/src/cr7_robot_controller/src/planners/ompl/: cr7_ompl_planner.cpp
ws_moveit/src/cr7_robot_controller/src/planners/pilz/: cr7_pilz_planner.cpp
ws_moveit/src/cr7_robot_controller/src/utils/: pose_utils.cpp  trajectory_analyzer.cpp
ws_moveit/src/cr7_robot_controller/test/: cr7_controller_test.cpp  cr7_test_main.cpp
(+31 files in other folders)
